# HW_2_12

./: pyproject.toml
contacts/: dependencies.py  main.py  schemas.py
contacts/database/: db.py  models.py
contacts/repository/: auth_repo.py  contact_model.py  contact_repo.py
contacts/routers/: auth.py  contacts.py
contacts/services/: auth.py
