[tool.poetry]
name = "hw-2-11"
version = "0.1.0"
description = ""
authors = ["Omelchenko-climber <omelchenko230783@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.30"
pydentic = "^0.0.1.dev3"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
